# challenge-challenge

./: .gitignore  alembic.ini  docker-compose.yaml  main.py  pyproject.toml
api/config/: config_db.py  settings.py
api/models/: crud.py  model.py  model_challenge.py  model_notification.py  types.py
api/shemas/: shemas.py
migrations/: env.py
notification_api/config/: settings.py
notification_api/models/: model_notification.py
notification_api/router/: notification.py
notification_api/shemas/: notification.py
other_api/router/: notification.py
